@@ -6,6 +6,11 @@
   - support no parenthes sub
       INT8_MAX
       sin 0.5
+  - string relative operator can receive byte array
+    if ($bytes1 eq $bytes2) {
+      
+    }
+  
 0.0389 2018-11-13
   - fix nested loop last bugs
   - fix nested loop next bugs
